--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -1,7 +1,7 @@
 {
   "builds": [
     {
-      "src": "frontend/package.json",
+      "src": "package.json",
       "use": "@vercel/static-build"
     }
   ],
